--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -125,14 +125,18 @@
                 <th mat-header-cell *matHeaderCellDef>
                   Created By
                 </th>
-                <td mat-cell *matCellDef="let row"></td>
+                <td mat-cell *matCellDef="let row">
+                  {{ row.createdByEmail }}
+                </td>
               </ng-container>
 
               <ng-container matColumnDef="delivered_by">
                 <th mat-header-cell *matHeaderCellDef>
                   Delivered By
                 </th>
-                <td mat-cell *matCellDef="let row"></td>
+                <td mat-cell *matCellDef="let row">
+                  {{ (row.delivery_note_items.length === 0) ? '' :  row.delivery_note_items[0]?.deliveredByEmail }}
+                </td>
               </ng-container>
               <!-- posting_date Column -->
               <ng-container matColumnDef="posting_date">
